<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="400dp"
    android:background="@drawable/bg_4"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_win"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="italic|bold" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/img" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="top">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/icon_bg"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/moves"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/moveId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icon_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Chronometer
                android:id="@+id/timeIdWiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_0_00"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:gravity="start">


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <ImageView
            android:id="@+id/ref"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/refresh1"
            app:tint="@color/white"
            tools:ignore="RtlSymmetry" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/img_2"
            app:tint="@color/white"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>


</LinearLayout>