<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#382559">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom|center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/puzzle"
            app:tint="@color/white"
            android:foregroundGravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puzzle_15"
            android:fontFamily="@font/whisper"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="70sp"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_2"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:id="@+id/ply">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/play"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_2"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:id="@+id/statistic">

            <ImageView
                android:contextClickable="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_2"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/img_1"
                app:tint="@color/white"
                tools:ignore="RtlSymmetry"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistic"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_2"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:id="@+id/info">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/info"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_2"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:id="@+id/exit">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/power_off"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>